[gd_scene load_steps=4 format=3 uid="uid://jbo4xpcv06af"]

[ext_resource type="Script" path="res://scripts/debug.gd" id="1_htl8g"]
[ext_resource type="Texture2D" uid="uid://bnkhfi0h3nxvh" path="res://assets/temp/route.png" id="2_15wnm"]

[sub_resource type="Theme" id="Theme_oh0yy"]
default_font_size = 10

[node name="Debug" type="CanvasLayer"]
visible = false
script = ExtResource("1_htl8g")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_oh0yy")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="DebugUpgrades" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/DebugUpgrades"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/DebugUpgrades/MarginContainer"]
layout_mode = 2

[node name="Shield" type="CheckBox" parent="MarginContainer/HBoxContainer/DebugUpgrades/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Shield"

[node name="Vision" type="CheckBox" parent="MarginContainer/HBoxContainer/DebugUpgrades/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Vision"

[node name="Recall" type="CheckBox" parent="MarginContainer/HBoxContainer/DebugUpgrades/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Recall"

[node name="DebugPath" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="PathToggle" type="Button" parent="MarginContainer/HBoxContainer/DebugPath"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
focus_mode = 0
toggle_mode = true
icon = ExtResource("2_15wnm")

[node name="DebugProperties" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0

[node name="ValueList" type="VBoxContainer" parent="MarginContainer/HBoxContainer/DebugProperties"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="MenuList" type="VBoxContainer" parent="MarginContainer/HBoxContainer/DebugProperties"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="toggled" from="MarginContainer/HBoxContainer/DebugUpgrades/MarginContainer/VBoxContainer/Shield" to="." method="_on_shield_toggled"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/DebugUpgrades/MarginContainer/VBoxContainer/Vision" to="." method="_on_vision_toggled"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/DebugUpgrades/MarginContainer/VBoxContainer/Recall" to="." method="_on_recall_toggled"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/DebugPath/PathToggle" to="." method="_on_path_toggle"]
